// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioTable renders correctly 1`] = `
<div
  className="portfolio-table"
>
  <div
    className="portfolio-table__header"
  >
    <div
      className="portfolio-table__title"
    >
      Group
    </div>
    <div
      className="portfolio-table__kpis"
    >
      <div
        className="portfolio-table__kpi"
        key="leased_rate"
      >
        <span>
          Lease Rate
          <Connect(InfoTooltipBase)
            transKey="leased_rate"
          />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="occupancy_rate"
      >
        <span>
          Occupancy Rate
          <Connect(InfoTooltipBase)
            transKey="occupied_rate"
          />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="lease_cd_rate"
      >
        <span>
          CD Rate
          <Connect(InfoTooltipBase) />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="renewal_rate"
      >
        <span>
          Renewal Rate
          <Connect(InfoTooltipBase)
            transKey="retention_rate"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="portfolio-table__body"
  >
    <PortfolioPropertyGroupRow
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="0"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="West"
      properties={
        Array [
          Object {
            "address": "San Antonio, TX 78207",
            "health": 0,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Building A",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
          },
          Object {
            "address": "San Antonio, TX 78208",
            "health": 1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Building B",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
          },
          Object {
            "address": "San Antonio, TX 78209",
            "health": 2,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Building C",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
          },
        ]
      }
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="group"
    />
    <PortfolioPropertyRow
      address="San Antonio, TX 78207"
      health={1}
      image_url="https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg"
      key="1"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="Building D"
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="individual"
    />
    <PortfolioPropertyRow
      address="San Antonio, TX 78207"
      health={2}
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="2"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="Remarkably National"
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="individual"
    />
    <PortfolioPropertyGroupRow
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="3"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="Portfolio Average"
      property_count={5}
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="group"
    />
  </div>
</div>
`;

exports[`PortfolioTable renders partial KPIs 1`] = `
<div
  className="portfolio-table"
>
  <div
    className="portfolio-table__header"
  >
    <div
      className="portfolio-table__title"
    >
      Group
    </div>
    <div
      className="portfolio-table__kpis"
    >
      <div
        className="portfolio-table__kpi"
        key="leased_rate"
      >
        <span>
          Lease Rate
          <Connect(InfoTooltipBase)
            transKey="leased_rate"
          />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="occupancy_rate"
      >
        <span>
          Occupancy Rate
          <Connect(InfoTooltipBase)
            transKey="occupied_rate"
          />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="lease_cd_rate"
      >
        <span>
          CD Rate
          <Connect(InfoTooltipBase) />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="renewal_rate"
      >
        <span>
          Renewal Rate
          <Connect(InfoTooltipBase)
            transKey="retention_rate"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="portfolio-table__body"
  >
    <PortfolioPropertyGroupRow
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="0"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="West"
      properties={
        Array [
          Object {
            "address": "San Antonio, TX 78207",
            "health": -1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "name": "Building A",
          },
          Object {
            "address": "San Antonio, TX 78208",
            "health": 1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Building B",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
          },
          Object {
            "address": "San Antonio, TX 78209",
            "health": 2,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Building C",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
          },
        ]
      }
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="group"
    />
    <PortfolioPropertyRow
      address="San Antonio, TX 78207"
      health={1}
      image_url="https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg"
      key="1"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      name="Building D"
      type="individual"
    />
    <PortfolioPropertyRow
      address="San Antonio, TX 78207"
      health={2}
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="2"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="Remarkably National"
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="individual"
    />
    <PortfolioPropertyGroupRow
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="3"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      kpis={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      name="Portfolio Average"
      property_count={5}
      targets={
        Object {
          "lease_cd_rate": 0.1,
          "leased_rate": 0.9,
          "occupancy_rate": 0.8,
          "renewal_rate": 0.5,
        }
      }
      type="group"
    />
  </div>
</div>
`;

exports[`PortfolioTable renders without KPIs 1`] = `
<div
  className="portfolio-table"
>
  <div
    className="portfolio-table__header"
  >
    <div
      className="portfolio-table__title"
    >
      Group
    </div>
    <div
      className="portfolio-table__kpis"
    >
      <div
        className="portfolio-table__kpi"
        key="leased_rate"
      >
        <span>
          Lease Rate
          <Connect(InfoTooltipBase)
            transKey="leased_rate"
          />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="occupancy_rate"
      >
        <span>
          Occupancy Rate
          <Connect(InfoTooltipBase)
            transKey="occupied_rate"
          />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="lease_cd_rate"
      >
        <span>
          CD Rate
          <Connect(InfoTooltipBase) />
        </span>
      </div>
      <div
        className="portfolio-table__kpi"
        key="renewal_rate"
      >
        <span>
          Renewal Rate
          <Connect(InfoTooltipBase)
            transKey="retention_rate"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="portfolio-table__body"
  >
    <PortfolioPropertyGroupRow
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="0"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      name="West"
      properties={
        Array [
          Object {
            "address": "San Antonio, TX 78207",
            "health": -1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "name": "Building A",
          },
          Object {
            "address": "San Antonio, TX 78208",
            "health": -1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "name": "Building B",
          },
          Object {
            "address": "San Antonio, TX 78209",
            "health": -1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "name": "Building C",
          },
        ]
      }
      type="group"
    />
    <PortfolioPropertyRow
      address="San Antonio, TX 78207"
      health={-1}
      image_url="https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg"
      key="1"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      name="Building D"
      type="individual"
    />
    <PortfolioPropertyRow
      address="San Antonio, TX 78207"
      health={-1}
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="2"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      name="Remarkably National"
      type="individual"
    />
    <PortfolioPropertyGroupRow
      image_url="https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg"
      key="3"
      kpi_order={
        Array [
          "leased_rate",
          "occupancy_rate",
          "lease_cd_rate",
          "renewal_rate",
        ]
      }
      name="Portfolio Average"
      property_count={5}
      type="group"
    />
  </div>
</div>
`;
